1. 파일트리 백엔드, 프론트 기능 구현 2. GITHUB_CLIENT_ID dev, prod 환경 분리
